Fixed Bug 61778 - Mail with very long to field overlaps the contact picture

--- a/ui/apps/io.ox/mail/style.less
+++ b/ui/apps/io.ox/mail/style.less
@@ -454,6 +454,8 @@ html.macos, html.ios {
 
     .recipients .person-link {
         color: #333;
+        text-overflow: ellipsis;
+        overflow: hidden;
         @media(max-width: 900px) { white-space: normal; }
     }
 
@@ -480,7 +482,11 @@ html.macos, html.ios {
     .detail-view-row {
         position: relative;
 
-        .recipients { float: left; }
+        .recipients {
+            float: left;
+            width: 100%;
+            display: flex;
+        }
         .priority { font-size: 14px; }
         .flag-picker {
             text-align: right;
@@ -506,6 +512,10 @@ html.macos, html.ios {
             .fa-bars {
                 font-size: 14px;
             }
+        }
+
+        &.row-3 {
+            margin-bottom: 16px;
         }
     }
 
